# autoScan

./: README.md  autoScan.cabal  autoScan.lkshs  autoScan.lkshw
src/: AutoScan.hs  Global.hs  Main.hs  PatternRecognition.hs  Tests.hs
test/: ls_script  step1.sh
