name: autoScan
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: JuicyPixels -any, array -any, base -any,
               containers -any, monads-tf -any, process -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: autoScan
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: PatternRecognition Global
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: