name: autoScan
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: "license"
copyright:
maintainer:
build-depends: JuicyPixels -any,
               array -any, base -any,
               containers -any,
               deepseq -any,
               process -any,
               vector -any,
               bytestring >= 0.9.1 && < 0.11,
               MonadCatchIO-transformers >= 0.2.1 && < 0.4,
               mtl                       >= 2     && < 3,
               snap-core                 >= 0.9   && < 0.11,
               snap-server               >= 0.9   && < 0.11,
               monads-tf -any,
               directory -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:

executable: autoScan
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: PatternRecognition Global
ghc-prof-options:
ghc-shared-options:
ghc-options: -rtsopts -static -XPackageImports -threaded -Wall -fwarn-tabs  -O2
hugs-options:
nhc98-options:
jhc-options:


-- -XPackageImports -funbox-strict-fields
